--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pusher": "^5.3.2",
     "pusher-js": "^8.4.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
