--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pusher-js": "^8.4.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
