--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,40 @@
-NODE_ENV=
-PORT=
+# =============================================================================
+# PlayClassix Environment Variables
+# =============================================================================
+# Copy this file to .env.local and fill in your actual values
+# NEVER commit .env.local to version control!
+# =============================================================================
 
-NEXT_PUBLIC_PUSHER_APP_ID=
-NEXT_PUBLIC_PUSHER_KEY=
-NEXT_PUBLIC_PUSHER_SECRET=
-NEXT_PUBLIC_PUSHER_CLUSTER=
+# -----------------------------------------------------------------------------
+# Application Environment
+# -----------------------------------------------------------------------------
+NODE_ENV=development  # development | production
+PORT=3000
 
+# -----------------------------------------------------------------------------
+# Site Configuration
+# -----------------------------------------------------------------------------
+NEXT_PUBLIC_SITE_URL=http://localhost:3000  # Change to your production URL
 
-UPSTASH_REDIS_REST_URL=
-UPSTASH_REDIS_REST_TOKEN=
+# -----------------------------------------------------------------------------
+# Pusher (Real-time WebSocket)
+# -----------------------------------------------------------------------------
+# Get your credentials from: https://dashboard.pusher.com/
+# Create a new Channels app and copy the credentials here
+
+PUSHER_APP_ID=your_pusher_app_id
+PUSHER_SECRET=your_pusher_secret
+
+# Public keys (exposed to client)
+NEXT_PUBLIC_PUSHER_KEY=your_pusher_key
+NEXT_PUBLIC_PUSHER_CLUSTER=us2  # or eu, ap2, etc.
+
+# -----------------------------------------------------------------------------
+# Upstash Redis (Production Database)
+# -----------------------------------------------------------------------------
+# Get your credentials from: https://console.upstash.com/
+# Create a new Redis database and use the REST API credentials
+
+UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your_redis_token
+
